--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/main.js" defer></script>    
+
 
   <title>Frontend Mentor | Single-page developer portfolio</title>
 </head>
@@ -21,10 +23,10 @@
     <nav class="navigation">
       <h3 class="h-m">adamkeyes</h3>
       <div class="navigation__social">
-        <img src="./img/icon-github.svg" alt="icon-github">
-        <img src="./img/icon-frontend-mentor.svg" alt="icon-frontend-mentor">
-        <img src="./img/icon-linkedin.svg" alt="icon-linkedin">
-        <img src="./img/icon-twitter.svg" alt="icon-twitter">
+        <img class="social-icon" src="./img/icon-github.svg" alt="icon-github">
+        <img class="social-icon" src="./img/icon-frontend-mentor.svg" alt="icon-frontend-mentor">
+        <img class="social-icon" src="./img/icon-linkedin.svg" alt="icon-linkedin">
+        <img class="social-icon" src="./img/icon-twitter.svg" alt="icon-twitter">
       </div>
     </nav>
 
@@ -41,7 +43,7 @@
     </header>
 
     <main>
-      <section class="experience">
+      <section class="experience" aria-label="experience">
         <img class="experience__rings" src="./img/pattern-rings.svg" alt="rings">
         <div class="experience__item">
           <p class="experience__skill">HTML</p>
@@ -87,8 +89,8 @@
               <li class="gallery__list-item">CSS</li>
             </ul>
             <div class="gallery__links">
-              <p class="cta cta-projects-item">View Project</p>
-              <p class="cta cta-projects-item">View Code</p>
+              <a class="cta cta-projects-item" href="#">View Project</a>
+              <a class="cta cta-projects-item" href="#">View Code</a>
             </div>
           </div>
 
@@ -100,8 +102,8 @@
               <li class="gallery__list-item">CSS</li>
             </ul>
             <div class="gallery__links">
-              <p class="cta cta-projects-item">View Project</p>
-              <p class="cta cta-projects-item">View Code</p>
+              <a class="cta cta-projects-item" href="#">View Project</a>
+              <a class="cta cta-projects-item" href="#">View Code</a>
             </div>
           </div>
 
@@ -114,12 +116,12 @@
               <li class="gallery__list-item">JAVASCRIPT</li>
             </ul>
             <div class="gallery__links">
-              <p class="cta cta-projects-item">View Project</p>
-              <p class="cta cta-projects-item">View Code</p>
+              <a class="cta cta-projects-item" href="#">View Project</a>
+              <a class="cta cta-projects-item" href="#">View Code</a>
             </div>
           </div>
 
-          
+
           <div class="gallery__item">
             <img class="gallery__img" src="./img/thumbnail-project-4-small.webp" alt="project-4">
             <p class="gallery__title">Entertainment web app</p>
@@ -129,8 +131,8 @@
               <li class="gallery__list-item">JAVASCRIPT</li>
             </ul>
             <div class="gallery__links">
-              <p class="cta cta-projects-item">View Project</p>
-              <p class="cta cta-projects-item">View Code</p>
+              <a class="cta cta-projects-item" href="#">View Project</a>
+              <a class="cta cta-projects-item" href="#">View Code</a>
             </div>
           </div>
 
@@ -143,8 +145,8 @@
               <li class="gallery__list-item">JAVASCRIPT</li>
             </ul>
             <div class="gallery__links">
-              <p class="cta cta-projects-item">View Project</p>
-              <p class="cta cta-projects-item">View Code</p>
+              <a class="cta cta-projects-item" href="#">View Project</a>
+              <a class="cta cta-projects-item" href="#">View Code</a>
             </div>
           </div>
 
@@ -157,8 +159,8 @@
               <li class="gallery__list-item">JAVASCRIPT</li>
             </ul>
             <div class="gallery__links">
-              <p class="cta cta-projects-item">View Project</p>
-              <p class="cta cta-projects-item">View Code</p>
+              <a class="cta cta-projects-item" href="#">View Project</a>
+              <a class="cta cta-projects-item" href="#">View Code</a>
             </div>
           </div>
 
@@ -166,86 +168,62 @@
 
       </section>
 
+    </main>
+
       <section class="contact">
-        <h2 class="contact__heading">Contact</h2>
+
+        <div class="contact__left-content">
+          <h2 class="contact__heading">Contact</h2>
+          <p class="contact__description">I would love to hear about your project and how I could help. Please fill in
+            the form, and I’ll get back to you as soon as possible.</p>
+        </div>
+        <div class="contact__right-content">
+          <form class="form" id="form">
+
+            <div class="form-control">
+              <label for="name"></label>
+              <input type="text" placeholder="Name" id="name">
+              <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
+              <small class="error-message"></small>
+            </div>
+
+            <div class="form-control">
+              <label for="email"></label>
+              <input type="email" placeholder="Email" id="email">
+              <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
+              <small class="error-message"></small>
+            </div>
+
+            <div class="form-control">
+              <label for="message"></label>
+              <textarea name="message" id="message" placeholder="Message" cols="30" rows="8"></textarea>
+              <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
+              <small class="error-message"></small>
+            </div>
+            <button class="cta form-button" type="submit">Send Message</button>
+            <img class="contact__rings" src="./img/pattern-rings.svg" alt="rings">
+          </div>
+          </form>
+        
       </section>
 
-    </main>
+<footer class="footer">
+  <div class="footer__inner">
+  <h3 class="h-m">adamkeyes</h3>
+  <div class="navigation__social">
+    <img class="social-icon" src="./img/icon-github.svg" alt="icon-github">
+    <img class="social-icon" src="./img/icon-frontend-mentor.svg" alt="icon-frontend-mentor">
+    <img class="social-icon" src="./img/icon-linkedin.svg" alt="icon-linkedin">
+    <img class="social-icon" src="./img/icon-twitter.svg" alt="icon-twitter">
+  </div>
+</div>
+</footer>
+
+   
 
   </div>
 
-
-
-
-  <!-- Based in the UK, I'm a front-end developer passionate about
-  building accessible web apps that users love.
-
-  Contact me
-
-  HTML
-  4 Years Experience
-
-  CSS
-  4 Years Experience
-
-  JavaScript
-  4 Years Experience
-
-  Accessibility
-  4 Years Experience
-
-  React
-  3 Years Experience
-
-  Sass
-  3 Years Experience
-
-  Projects
-
-  Contact me
-
-  Design portfolio
-  HTML CSS
-  View project
-  View code
-
-  E-learning landing page
-  HTML CSS
-  View project
-  View code
-
-  Todo web app
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Entertainment web app
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Memory Game
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Art gallery showcase
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Contact
-
-  I would love to hear about your project and how I could help. Please
-  fill in the form, and I’ll get back to you as soon as possible.
-
-  Name
-  Email
-  Message
-
-  Send message
-
-  adamkeyes -->
+ 
 
 </body>
 
