--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/main.js" defer></script>    
+  <script src="js/main.js" defer></script>
 
 
   <title>Frontend Mentor | Single-page developer portfolio</title>
@@ -33,13 +33,21 @@
 
     <header class="header">
       <div class="header__inner-container">
-        <img class="header__profile-pic" src="./img/image-profile-mobile.webp" alt="profile-pic">
-        <h1 class="header__heading">Nice to meet you! I'm <span class="underline">Adam Keyes</span>.</h1>
+        <!-- <img class="header__profile-pic" src="./img/image-profile-mobile.webp" alt="profile-pic"> -->
+        <picture class="header__picture">
+          <source media="(min-width: 1000px)" srcset="/img/image-profile-desktop.webp">
+          <source media="(min-width: 600px)" srcset="/img/image-profile-tablet.webp">
+          <img class="header__profile-pic" alt="world map" src="./img/image-profile-mobile.webp">
+        </picture>
+        <div class="header__left-content">
+          <h1 class="header__heading"><span class="heading-top">Nice to</span> <span class="center">meet you! I'm
+            </span><span class="underline">Adam Keyes</span>.</h1>
+          <p class="header__description">
+            Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.
+          </p>
+          <p class="cta cta-header">Contact me</p>
+        </div>
       </div>
-      <p class="header__description">
-        Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.
-      </p>
-      <p class="cta cta-header">Contact me</p>
     </header>
 
     <main>
@@ -82,7 +90,10 @@
         <div class="gallery">
 
           <div class="gallery__item">
-            <img class="gallery__img" src="./img/thumbnail-project-1-small.webp" alt="project-1">
+            <picture class="gallery__picture">
+              <source media="(min-width: 600px)" srcset="./img/thumbnail-project-1-large.webp">
+              <img class="gallery__profile-pic" alt="design-portfolio" src="./img/thumbnail-project-1-small.webp">
+            </picture>
             <p class="gallery__title">Design Portfolio</p>
             <ul class="gallery__list-languages">
               <li class="gallery__list-item">HTML</li>
@@ -95,7 +106,10 @@
           </div>
 
           <div class="gallery__item">
-            <img class="gallery__img" src="./img/thumbnail-project-2-small.webp" alt="project-2">
+            <picture class="gallery__picture">
+              <source media="(min-width: 600px)" srcset="./img/thumbnail-project-2-large.webp">
+              <img class="gallery__profile-pic" alt="e-learning landing page" src="./img/thumbnail-project-2-small.webp">
+            </picture>
             <p class="gallery__title">e-learning landing page</p>
             <ul class="gallery__list-languages">
               <li class="gallery__list-item">HTML</li>
@@ -108,7 +122,10 @@
           </div>
 
           <div class="gallery__item">
-            <img class="gallery__img" src="./img/thumbnail-project-3-small.webp" alt="project-3">
+            <picture class="gallery__picture">
+              <source media="(min-width: 600px)" srcset="./img/thumbnail-project-3-large.webp">
+              <img class="gallery__profile-pic" alt="to do web app" src="./img/thumbnail-project-3-small.webp">
+            </picture>
             <p class="gallery__title">to do web app</p>
             <ul class="gallery__list-languages">
               <li class="gallery__list-item">HTML</li>
@@ -123,7 +140,10 @@
 
 
           <div class="gallery__item">
-            <img class="gallery__img" src="./img/thumbnail-project-4-small.webp" alt="project-4">
+            <picture class="gallery__picture">
+              <source media="(min-width: 600px)" srcset="./img/thumbnail-project-4-large.webp">
+              <img class="gallery__profile-pic" alt="entertainment web app" src="./img/thumbnail-project-4-small.webp">
+            </picture>
             <p class="gallery__title">Entertainment web app</p>
             <ul class="gallery__list-languages">
               <li class="gallery__list-item">HTML</li>
@@ -137,7 +157,10 @@
           </div>
 
           <div class="gallery__item">
-            <img class="gallery__img" src="./img/thumbnail-project-5-small.webp" alt="project-5">
+            <picture class="gallery__picture">
+              <source media="(min-width: 600px)" srcset="./img/thumbnail-project-5-large.webp">
+              <img class="gallery__profile-pic" alt="memory game" src="./img/thumbnail-project-5-small.webp">
+            </picture>
             <p class="gallery__title">Memory game</p>
             <ul class="gallery__list-languages">
               <li class="gallery__list-item">HTML</li>
@@ -151,7 +174,10 @@
           </div>
 
           <div class="gallery__item">
-            <img class="gallery__img" src="./img/thumbnail-project-6-small.webp" alt="project-6">
+            <picture class="gallery__picture">
+              <source media="(min-width: 600px)" srcset="./img/thumbnail-project-6-large.webp">
+              <img class="gallery__profile-pic" alt="art gallery showcase" src="./img/thumbnail-project-6-small.webp">
+            </picture>
             <p class="gallery__title">art gallery showcase</p>
             <ul class="gallery__list-languages">
               <li class="gallery__list-item">HTML</li>
@@ -170,60 +196,65 @@
 
     </main>
 
-      <section class="contact">
+    <section class="contact">
+      <div class="contact__inner-container">
 
-        <div class="contact__left-content">
-          <h2 class="contact__heading">Contact</h2>
-          <p class="contact__description">I would love to hear about your project and how I could help. Please fill in
-            the form, and I’ll get back to you as soon as possible.</p>
-        </div>
-        <div class="contact__right-content">
-          <form class="form" id="form">
+      <div class="contact__left-content">
+        <h2 class="contact__heading">Contact</h2>
+        <p class="contact__description">I would love to hear about your project and how I could help. Please fill in
+          the form, and I’ll get back to you as soon as possible.</p>
+      </div>
+      <div class="contact__right-content">
+        <form class="form" id="form">
 
-            <div class="form-control">
-              <label for="name"></label>
-              <input type="text" placeholder="Name" id="name">
-              <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
-              <small class="error-message"></small>
-            </div>
-
-            <div class="form-control">
-              <label for="email"></label>
-              <input type="email" placeholder="Email" id="email">
-              <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
-              <small class="error-message"></small>
-            </div>
-
-            <div class="form-control">
-              <label for="message"></label>
-              <textarea name="message" id="message" placeholder="Message" cols="30" rows="8"></textarea>
-              <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
-              <small class="error-message"></small>
-            </div>
-            <button class="cta form-button" type="submit">Send Message</button>
-            <img class="contact__rings" src="./img/pattern-rings.svg" alt="rings">
+          <div class="form-control">
+            <label for="name"></label>
+            <input type="text" placeholder="Name" id="name">
+            <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
+            <small class="error-message"></small>
           </div>
-          </form>
-        
-      </section>
 
-<footer class="footer">
-  <div class="footer__inner">
-  <h3 class="h-m">adamkeyes</h3>
-  <div class="navigation__social">
-    <img class="social-icon" src="./img/icon-github.svg" alt="icon-github">
-    <img class="social-icon" src="./img/icon-frontend-mentor.svg" alt="icon-frontend-mentor">
-    <img class="social-icon" src="./img/icon-linkedin.svg" alt="icon-linkedin">
-    <img class="social-icon" src="./img/icon-twitter.svg" alt="icon-twitter">
+          <div class="form-control">
+            <label for="email"></label>
+            <input type="email" placeholder="Email" id="email">
+            <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
+            <small class="error-message"></small>
+          </div>
+
+          <div class="form-control">
+            <label for="message"></label>
+            <textarea name="message" id="message" placeholder="Message" cols="30" rows="8"></textarea>
+            <img class="i-error" src="./img/icon-error.svg" alt="error-icon">
+            <small class="error-message"></small>
+          </div>
+          <button class="cta form-button" type="submit">Send Message</button>
+          <img class="contact__rings" src="./img/pattern-rings.svg" alt="rings">
+      
+      </form>
+
+    </div>
+
+  </div> <!--inner-content-end-->
+
+    </section>
+
+    <footer class="footer">
+      <div class="footer__inner">
+        <h3 class="h-m">adamkeyes</h3>
+        <div class="navigation__social">
+          <img class="social-icon" src="./img/icon-github.svg" alt="icon-github">
+          <img class="social-icon" src="./img/icon-frontend-mentor.svg" alt="icon-frontend-mentor">
+          <img class="social-icon" src="./img/icon-linkedin.svg" alt="icon-linkedin">
+          <img class="social-icon" src="./img/icon-twitter.svg" alt="icon-twitter">
+        </div>
+      </div>
+    </footer>
+
+
+
   </div>
-</div>
-</footer>
 
-   
 
-  </div>
-
- 
 
 </body>
 
