--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="header__inner-container">
         <!-- <img class="header__profile-pic" src="./img/image-profile-mobile.webp" alt="profile-pic"> -->
         <picture class="header__picture">
-          <source media="(min-width: 1000px)" srcset="/img/image-profile-desktop.webp">
-          <source media="(min-width: 600px)" srcset="/img/image-profile-tablet.webp">
+          <source media="(min-width: 1000px)" srcset="./img/image-profile-desktop.webp">
+          <source media="(min-width: 600px)" srcset="./img/image-profile-tablet.webp">
           <img class="header__profile-pic" alt="world map" src="./img/image-profile-mobile.webp">
         </picture>
         <div class="header__left-content">
