--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
 
     <header class="header">
       <div class="header__inner-container">
-        <!-- <img class="header__profile-pic" src="./img/image-profile-mobile.webp" alt="profile-pic"> -->
+        <img src="./img/pattern-rings.svg" alt="rings" class="header__rings-desktop">
         <picture class="header__picture">
           <source media="(min-width: 1000px)" srcset="./img/image-profile-desktop.webp">
           <source media="(min-width: 600px)" srcset="./img/image-profile-tablet.webp">
           <img class="header__profile-pic" alt="world map" src="./img/image-profile-mobile.webp">
         </picture>
         <div class="header__left-content">
-          <h1 class="header__heading"><span class="heading-top">Nice to</span> <span class="center">meet you! I'm
+          <h1 class="header__heading-desktop">Nice to meet you! I'm <span class="underline">Adam Keyes</span>.</h1>
+          <h1 class="header__heading"><span id="span-heading" class="heading-top">Nice to</span> <span class="center">meet you! I'm
             </span><span class="underline">Adam Keyes</span>.</h1>
           <p class="header__description">
             Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.
@@ -90,6 +91,12 @@
         <div class="gallery">
 
           <div class="gallery__item">
+            <div class="gallery__image-overlay">
+              <div class="gallery__image-overlay-container">
+              <a class="cta cta-projects-item link-overlay" href="#">View Project</a>
+              <a class="cta cta-projects-item link-overlay" href="#">View Code</a>
+            </div>
+            </div>
             <picture class="gallery__picture">
               <source media="(min-width: 600px)" srcset="./img/thumbnail-project-1-large.webp">
               <img class="gallery__profile-pic" alt="design-portfolio" src="./img/thumbnail-project-1-small.webp">
@@ -106,6 +113,12 @@
           </div>
 
           <div class="gallery__item">
+            <div class="gallery__image-overlay">
+              <div class="gallery__image-overlay-container">
+                <a class="cta cta-projects-item link-overlay" href="#">View Project</a>
+                <a class="cta cta-projects-item link-overlay" href="#">View Code</a>
+              </div>
+            </div>
             <picture class="gallery__picture">
               <source media="(min-width: 600px)" srcset="./img/thumbnail-project-2-large.webp">
               <img class="gallery__profile-pic" alt="e-learning landing page" src="./img/thumbnail-project-2-small.webp">
@@ -122,6 +135,12 @@
           </div>
 
           <div class="gallery__item">
+            <div class="gallery__image-overlay">
+              <div class="gallery__image-overlay-container">
+                <a class="cta cta-projects-item link-overlay" href="#">View Project</a>
+                <a class="cta cta-projects-item link-overlay" href="#">View Code</a>
+              </div>
+            </div>
             <picture class="gallery__picture">
               <source media="(min-width: 600px)" srcset="./img/thumbnail-project-3-large.webp">
               <img class="gallery__profile-pic" alt="to do web app" src="./img/thumbnail-project-3-small.webp">
@@ -140,6 +159,12 @@
 
 
           <div class="gallery__item">
+            <div class="gallery__image-overlay">
+              <div class="gallery__image-overlay-container">
+                <a class="cta cta-projects-item link-overlay" href="#">View Project</a>
+                <a class="cta cta-projects-item link-overlay" href="#">View Code</a>
+              </div>
+            </div>
             <picture class="gallery__picture">
               <source media="(min-width: 600px)" srcset="./img/thumbnail-project-4-large.webp">
               <img class="gallery__profile-pic" alt="entertainment web app" src="./img/thumbnail-project-4-small.webp">
@@ -157,6 +182,12 @@
           </div>
 
           <div class="gallery__item">
+            <div class="gallery__image-overlay">
+              <div class="gallery__image-overlay-container">
+                <a class="cta cta-projects-item link-overlay" href="#">View Project</a>
+                <a class="cta cta-projects-item link-overlay" href="#">View Code</a>
+              </div>
+            </div>
             <picture class="gallery__picture">
               <source media="(min-width: 600px)" srcset="./img/thumbnail-project-5-large.webp">
               <img class="gallery__profile-pic" alt="memory game" src="./img/thumbnail-project-5-small.webp">
@@ -174,6 +205,12 @@
           </div>
 
           <div class="gallery__item">
+            <div class="gallery__image-overlay">
+              <div class="gallery__image-overlay-container">
+                <a class="cta cta-projects-item link-overlay" href="#">View Project</a>
+                <a class="cta cta-projects-item link-overlay" href="#">View Code</a>
+              </div>
+            </div>
             <picture class="gallery__picture">
               <source media="(min-width: 600px)" srcset="./img/thumbnail-project-6-large.webp">
               <img class="gallery__profile-pic" alt="art gallery showcase" src="./img/thumbnail-project-6-small.webp">
