--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
     <header class="header">
       <div class="header__inner-container">
         <img src="./img/pattern-rings.svg" alt="rings" class="header__rings-desktop">
+        <!-- <img src="./img/pattern-circle.svg" alt="circle" class="header__circle-desktop"> -->
+        <div class="picture-container">
+          <img src="./img/pattern-circle.svg" alt="circle" class="header__circle-desktop">
         <picture class="header__picture">
           <source media="(min-width: 1000px)" srcset="./img/image-profile-desktop.webp">
           <source media="(min-width: 600px)" srcset="./img/image-profile-tablet.webp">
           <img class="header__profile-pic" alt="world map" src="./img/image-profile-mobile.webp">
         </picture>
+      </div>
         <div class="header__left-content">
           <h1 class="header__heading-desktop">Nice to meet you! I'm <span class="underline">Adam Keyes</span>.</h1>
           <h1 class="header__heading"><span id="span-heading" class="heading-top">Nice to</span> <span class="center">meet you! I'm
